# job-scalper

./: .gitignore  CONTEXT.md  PLAN.md  README.md  config.example.yaml  pyproject.toml
docs/adr/: 0001-source-adapter-normalization.md  0002-collect-report-split.md  0003-llm-funnel-deterministic-scoring.md  0004-company-agnostic-search-sources.md  0004-self-building-source-command.md  0005-company-agnostic-search-sources.md  0005-digest-fresh-catch.md  0006-posting-status-cli-verbs.md  0006-resume-skill-fit-tiers.md  0007-pdf-via-chromium.md
indeed-debug/: https-www-indeed-com-jobs-q-python-backend-l-remote-1781538933184.html
src/scalper/: __init__.py  __main__.py  app_draft.py  cli.py  config.py  enrich.py  insights.py  models.py  pdf.py  profile_draft.py  prompts.py  report.py  resume.py  scoring.py  semantic.py  store.py  url_fetch.py
src/scalper/commands/: __init__.py  collect.py  digest.py  draft.py  insights.py  profile.py  render.py  report.py  sources.py
src/scalper/llm/: __init__.py  anthropic_provider.py  base.py
src/scalper/sources/: __init__.py  _browser.py  _util.py  adzuna.py  arbeitnow.py  base.py  hackernews.py  himalayas.py  indeed.py  jobicy.py  linkedin.py  reddit.py  remoteok.py  remotive.py  themuse.py  weworkremotely.py  workingnomads.py
src/scalper/templates/: _panel.html  _script.html  _styles.html  cover_letter_pdf.html  report_combined.html  resume_pdf.html
tests/: test_aggregator_sources.py  test_app_draft.py  test_commands.py  test_commands_digest.py  test_commands_draft.py  test_commands_profile.py  test_commands_render.py  test_config.py  test_enrich.py  test_indeed.py  test_insights.py  test_linkedin.py  test_llm_provider.py  test_new_sources.py  test_pdf.py  test_phase5.py  test_profile_draft.py  test_remotive_remoteok.py  test_resume.py  test_scoring.py  test_semantic.py  test_util.py
